RESOLVED FIXED286960
BBQ OSR should count try exceptions as part of implicit slots only in IPInt OSR
https://bugs.webkit.org/show_bug.cgi?id=286960
Summary BBQ OSR should count try exceptions as part of implicit slots only in IPInt OSR
daniel_liu4
Reported 2025-02-03 14:09:04 PST
https://bugs.webkit.org/show_bug.cgi?id=285624 fixed the issue incorrectly by updating the calculation of implicitSlots in all locations, leading to issues downstream in BBQ. rdar://144077240
Attachments
daniel_liu4
Comment 1 2025-02-03 14:27:25 PST
EWS
Comment 2 2025-02-06 13:35:53 PST
Committed 289960@main (4d8c1e151637): <https://commits.webkit.org/289960@main> Reviewed commits have been landed. Closing PR #39936 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.