BBQ OSR should count try exceptions only in IPInt OSR https://bugs.webkit.org/show_bug.cgi?id=286960 rdar://144077240

Reviewed by Yijia Huang.

Previously, we fixed the issue of an incorrect stackmap exception slot count by
updating the definition of implicitSlots. However, this leads to issues later on
in BBQ, since this calculation leads to incorrect offsets and indexing out of bounds.
This patch fixes that issue by only counting the exception slot when calculating
the IPInt->BBQ stackmap, and otherwise using the original counting for implicit slots.

* Source/JavaScriptCore/wasm/WasmBBQJIT.cpp:
(JSC::Wasm::BBQJITImpl::ControlData::implicitSlots const):
(JSC::Wasm::BBQJITImpl::BBQJIT::makeStackMap):

Canonical link: https://commits.webkit.org/289960@main